--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@preact/preset-vite": "^2.10.1",
+    "preact": "^10.26.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
